...
                    // Button to confirm the region you chose
                    confirmButton = {
                        Button(
                            onClick = {
                                openDialog.value = false
                            }) {
                            Text("Ok")
                        }
                    }
                )
            }

            Spacer(modifier = Modifier.height(20.dp))
...
